# SupraLens

./: LICENSE  README.md  pyproject.toml  requirements.txt
assets/: test_sgl_08052024.gpkg
demo/lake_id_test_sgl_08052024_date_all/: overlapping_strips_buffer_200.gpkg
lake_id_test_sgl_08052024_date_all/: test_sgl_08052024_estimated_lake_volumes.csv  test_sgl_08052024_report.csv
pipeline/: analyze_dems.py
pipeline/data/: __init__.py  data_loader.py  data_statistics.py  geometries.py  retriever.py
pipeline/utils/: __init__.py  constants.py  execution_utils.py  plotting.py
